add_jquery_and_popup.js

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="javascripts/lib/jquery.min.js"></script>
   </head>
   <body>
     <h1>Cute Cat</h1>
     <img src="https://media2.giphy.com/media/CjmvTCZf2U3p09Cn0h/200w.gif"/>
     <p>Source: <b>GIFPHY</b></p>
+
+    <script src="javascripts/popup.js"></script>
   </body>
 </html>
