--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Cute Cat</h1>
-    <img src="https://media2.giphy.com/media/CjmvTCZf2U3p09Cn0h/200w.gif"/>
+    <img id="js-img" src="images/loading.gif"/>
     <p>Source: <b>GIFPHY</b></p>
 
     <script src="javascripts/popup.js"></script>
